Columns move to the left and it displays their current state.

--- a/index.html
+++ b/index.html
@@ -65,5 +65,6 @@
     </main>
     <script type="module" src="/main.js"></script>
     <script type="module" src="/modules/controller.js"></script>
+    <script type="module" src="/modules/gameBoard.js"></script>
   </body>
 </html>
