Game stops when player runs out of lives.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
           </div>
         </div>
       </section>
+      <section>
+        <button class="start-button">START</button>
+      </section>
     </main>
     <script type="module" src="/main.js"></script>
     <script type="module" src="/modules/controller.js"></script>
